MTM-28175: Migrate microservice-sdk to spring-boot 2.x